# rusty-bar

./: Cargo.toml  PKGBUILD  README.md  rusty-bar-bin-0.1.0-1-x86_64.pkg.tar.zst
example config/: rustyconf.ron
pkg/rusty-bar-bin/: .BUILDINFO  .MTREE  .PKGINFO
src/: #ram.rs#  #temps.rs#  #widget.rs#  active_window_title  active_window_title.rs  battery.rs  clock.rs  command.rs  cpu.rs  disk_usage.rs  lib.rs  main.rs  ram.rs  rusty-bar  sensors.rs  style.css  style.css~  temps.rs  volume.rs  wireless.rs  workspaces.rs  xcb.rs
