[package]
name = "rusty-bar"
version = "0.1.0"
authors = ["the lonesome programmer <m@thelonesomeprogrammer.dk>"]
edition = "2021"
description = "A simple icon loving bar for wayland"
repository = "https://github.com/thelonesomeprogrammer/rusty-bar"
readme = "README.md"
keywords = ["wayland", "status", "bar"]
categories = ["gui"]
license = "MIT"
homepage = "https://thelonesomeprogrammer.github.io/rusty-bar/"

[dependencies]
device_query = "1.1.1"
anyhow = "1.0.41"
cairo-rs = "0.17.0"
cairo-sys-rs = "0.17.0" 
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
pango = "0.17.0"
pangocairo = "0.17.0"
weathernoaa = "0.2.0"
iwlib = { version = "0.1"}
alsa = { version = "0.7.0"}
regex = "1.5"
byte-unit = "4.0.12"
reqwest = { version = "0.11" }
#process-stream = { version = "0.4.1"}
serde = { version = "1.0.152"}
serde_derive = { version = "1.0.152"}
serde_json = { version = "1.0.91"}
battery = "0.7.8"
ron = "0.8.0"
gtk = "0.17.0"
gtk-layer-shell = "0.6.0"
